# traffic-zero

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  check_deps.py  pyproject.toml  run_simulation.py
.github/ISSUE_TEMPLATE/: bug_report.md
agents/: __init__.py  multi_agent_utils.py  train_multi_agent_ppo.py
analysis/: __init__.py
configs/: multi_agent_ppo.yaml
dashboard/: __init__.py
data/: __init__.py
experiments/: EXPERIMENTS.md
experiments/scenarios/: schema.json
experiments/simple4/: default.yaml  light_traffic.yaml  light_traffic_random.yaml  rush_hour.yaml  rush_hour_random.yaml
models/: __init__.py
scripts/: __init__.py  analyze_lane_data.py  create_extreme_rush_hour.py  filter_lane_data.py  filter_lanes_example.py  filter_to_main_lanes.py  generate_random_flows.py
scripts/sim/: data_analysis.ipynb  lane_data.ipynb
sim/: CARLA.md  DATA_COLLECTION.md  README.md  SIMULATION.md  SUMO.md  SUMO_DATA.md  __init__.py  sumo_runner.py
sim/carla/: __init__.py  __main__.py  bridge.py  check_maps.py  check_setup.py  examples.py  multi_agent_bridge.py  runner.py
sim/intersections/simple4/: .sumocfg  edges.edg.xml  nodes.nod.xml  routes.rou.xml  simple4.sumocfg  simple4.xodr  tls.add.xml
sim/scenarios/: __init__.py  generator.py  loader.py  scenario.py
sim/sumo/: __init__.py  __main__.py  data_collector.py  dataset.py  generate_config.py  gym_env.py  lane_utils.py  metrics.py  runner.py  tls_controller.py
sim/sumo/dataset/: __init__.py  __main__.py
