[project]
name = "traffic-zero"
version = "0.1.0"
description = "Adaptive multi-agent traffic lights system"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "sumolib",
    "traci",
    "matplotlib",
    "seaborn",
    "scipy",
    "networkx",
    "torch",
    "gymnasium",
    "ray[rllib]",
    "tensorboard",
    "opencv-python",
    "flake8-bugbear>=24.12.12",
    "flake8-comprehensions>=3.17.0",
    "flake8-docstrings>=1.7.0",
    "flake8>=7.3.0",
    "black[jupyter]>=25.9.0",
    "pre-commit>=4.3.0",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "mpe2>=0.0.1",
    "dash>=3.2.0",
]
requires-python = ">=3.13"
license = {text = "MIT"}
